@@ -32,7 +32,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Properties;
-import java.util.Set;
 
 import org.apache.jute.BinaryOutputArchive;
 import org.apache.jute.InputArchive;
